templates/service-mediawiki.yaml
apiVersion: v1
kind: Service
metadata:
  name: mediawiki-service
  labels:
    app: mediawiki
spec:
  type: ClusterIP
  ports:
  - port: 80
    targetPort: 80
  selector:
    app: mediawiki
